--- a/src/app/Products/product-detail/product-detail.component.html
+++ b/src/app/Products/product-detail/product-detail.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="product-detail" *ngIf="product">
-    <img [src]="product?.image" alt="{{ product?.title }}" class="product-image-detail" />
+    <img [src]="product?.image" alt="{{ product?.title }}" class="img-thumbnail" />
     <div class="productData">
 
         <h1 class="product-name">{{ product?.title }}</h1>
