--- a/src/app/Products/product-detail/product-detail.component.css
+++ b/src/app/Products/product-detail/product-detail.component.css
@@ -6,14 +6,15 @@
 .product-detail{
     padding: 20px;
     display: flex;
+    flex-wrap: wrap;
 }
 .productData{
     padding: 20px;
     flex-direction: column;
     display: flex;
+    width: 400px;
 }
 .old-price {
-
     text-decoration: line-through;
     color: rgba(50, 50, 50, 0.6);
     font-size: 15px;
