--- a/src/app/CartPage/cart/cart.component.html
+++ b/src/app/CartPage/cart/cart.component.html
@@ -1,1 +1,4 @@
-<app-product-cart></app-product-cart>
+<div class="cartPage">
+    <app-product-cart></app-product-cart>
+    <app-checkout-summary></app-checkout-summary>
+</div>
