--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,6 +16,11 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/products">Products</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/cart">cart</a>
+                </li><li class="nav-item">
+                    <a class="nav-link" routerLink="/login">Login</a>
+                </li>
             </ul>
         </div>
     </div>
