--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,15 +11,19 @@
                     <a class="nav-link" routerLink="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/about">About</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" routerLink="/products">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/cart">cart</a>
-                </li><li class="nav-item">
+                    <a class="nav-link" routerLink="/cart">Cart</a>
+                </li>
+                <li class="nav-item" *ngIf="!isLoggedIn()">
                     <a class="nav-link" routerLink="/login">Login</a>
+                </li>
+                <li class="nav-item" *ngIf="!isLoggedIn()">
+                    <a class="nav-link" routerLink="/signup">Signup</a>
+                </li>
+                <li class="nav-item" *ngIf="isLoggedIn()">
+                    <a class="nav-link" (click)="logout()">Logout</a>
                 </li>
             </ul>
         </div>
